--- a/index.html
+++ b/index.html
@@ -1,20 +1,27 @@
-<!doctype html>
-<html lang="en">
-  <head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, minimum-scale=1, initial-scale=1, user-scalable=yes">
+<!DOCTYPE html>
+<html lang="es">
 
-    <title>schedule-secure</title>
-    <meta name="description" content="schedule-secure description">
+<head>
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, minimum-scale=1, initial-scale=1, user-scalable=yes">
 
-    <!-- See https://goo.gl/OOhYW5 -->
-    <link rel="manifest" href="/manifest.json">
+  <title>schedule-secure</title>
+  <meta name="description" content="schedule-secure description">
 
-    <script src="/bower_components/webcomponentsjs/webcomponents-loader.js"></script>
+  <link rel="manifest" href="/manifest.json">
+  <script src="/bower_components/webcomponentsjs/webcomponents-loader.js"></script>
+  <link rel="import" href="/src/schedule-app/schedule-app.html">
+  <style>
+    html {
+      background-image: url("src/images/six-grades.jpg");
+      background-repeat: no-repeat;
+      background-size: cover cover;
+    }
+  </style>
+</head>
 
-    <link rel="import" href="/src/schedule-app/schedule-app.html">
-  </head>
-  <body>
-    <schedule-app></schedule-app>
-  </body>
+<body>
+  <schedule-app></schedule-app>
+</body>
+
 </html>
